# discord-py-paginator

./: .gitignore  LICENCE  README.md  _test.py  config.md  example.py  pyproject.toml  token
discord/ext/paginator/: __init__.py  button.py  buttons.py  errors.py  modals.py  paginator.py  view_buttons.py
examples/: config_example.py  default.py  full_paginator.py  infinite_paginator.py  instant_paginator.py  normal_list.py  send_paginator.py  with_config.py  with_events.py  with_own_buttons.py  with_search.py
