[tool.poetry]
name = "discord-ext-paginator"
version = "2.0.0B"
description = "A paginator using views and buttons"
authors = ["Philskillz <kek.notanactualemail.com>"]
license = "MIT"
packages = [{ include = "discord" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", branch = "master" }

[build-system]
requires = ["git+https://github.com/Rapptz/discord.py.git>=2.1.0"]
build-backend = "poetry.core.masonry.api"