[tool.poetry]
name = "discord-ext-paginator"
version = "2.1.2"
description = "A paginator using views and buttons"
authors = ["Philskillz_ <philipp.nikos@gmail.com>"]
license = "MIT"
packages = [{ include = "discord" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", branch = "master" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"